examples/knative-restate-go/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: knative-restate-go
  namespace: default
  annotations:
    networking.knative.dev/ingress.class: kourier.ingress.networking.knative.dev
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/min-scale: "0"
      labels:
        allow.restate.dev/restate-test: "true"
    spec:
      containers:
        - image: ${IMAGE}
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
              name: h2c
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
