examples/knative-restate-go/restate-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-restate-to-knative
  namespace: restate-test
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: restate-test
      app.kubernetes.io/name: restate
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: knative-serving
